syntax = "proto3";

option csharp_namespace = "Airline.Application.Contracts.Protos";

message TicketGenerationRequest {
  string request_id = 1;

  int32 count = 2;

  int32 batch_size = 3;
}

message TicketCreateUpdateDtoMessage {
  int32 flight_id = 1;
  int32 passenger_id = 2;
  string seat_number = 3;
  bool has_hand_luggage = 4;
  double baggage_weight = 5;
}

message TicketBatchStreamMessage {
  string request_id = 1;
  repeated TicketCreateUpdateDtoMessage tickets = 2;
  bool is_final = 3;
}

service TicketGeneratorGrpcService {
  rpc TicketStream (stream TicketGenerationRequest) returns (stream TicketBatchStreamMessage);
}